# qse-studio

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: build-desktop.yml
api-server/: package-lock.json  package.json
api-server/db/migrations/: init.sql
api-server/src/: config.ts  db.ts  index.ts
api-server/src/domain/: guardrails.ts  nc-machine.ts  nc-states.ts
api-server/src/routes/: actions.ts  nc.ts
api-server/src/services/: audit-trail.ts  base-service.ts  mail-service.ts  pdf-service.ts
api-server/src/services/ia/: ia-router.ts  ollama-client.ts  rules-engine.ts
docs/: design-doc.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web-client/: package-lock.json  package.json
web-client/src/app/: global.css  layout.tsx  page.tsx
web-client/src/app/declare/: page.tsx
web-client/src/app/nc/: page.tsx
web-client/src/app/nc/[id]/: detail.css  page.tsx
web-client/src/app/users/: page.tsx
web-client/src/components/: IshikawaDiagram.tsx  OnboardingModal.tsx  QRCodeModal.tsx
web-client/src/services/: api-provider.ts  data-provider.ts  provider-manager.ts  sqlite-provider.ts
